Up to enumerations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "editor.cursorBlinking": "solid",
   "editor.fontFamily": "ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro', 'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace",
   "editor.fontLigatures": false,
-  "editor.fontSize": 22,
+  "editor.fontSize": 14,
   "editor.formatOnPaste": false,
   "editor.formatOnSave": false,
   "editor.lineNumbers": "on",
@@ -19,9 +19,9 @@
   "explorer.compactFolders":false,
   "files.autoSave": "afterDelay",
   "screencastMode.onlyKeyboardShortcuts": true,
-  "terminal.integrated.fontSize": 18,
+  "terminal.integrated.fontSize": 14,
   "window.commandCenter":false,
-  "workbench.colorTheme": "Visual Studio Dark",
+  "workbench.colorTheme": "Visual Studio Light - C++",
   "workbench.fontAliasing": "antialiased",
   "workbench.statusBar.visible": true,
   "C_Cpp.clang_format_fallbackStyle": "none",
@@ -91,5 +91,6 @@
     "xutility": "cpp",
     "stack": "cpp",
     "complex": "cpp"
-}
+},
+"window.autoDetectColorScheme": true
 }
